--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
     "test": "jest",
     "start": "node ./server.js",
     "dev": "nodemon ./server.js",
-    "lint": "npx eslint ."
+    "lint": "npx eslint .",
+    "deploy-mesto-back": "scp -r ./* sukhanovgarik@51.250.4.189:/home/sukhanovgarik/mesto-backend"
   },
   "repository": {
     "type": "git",
